Adapt all Elements tests to changes in JUnit 5.