@@ -13,10 +13,10 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 package org.cp.elements.data.conversion.converters;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 
 import java.math.BigDecimal;
 import java.math.BigInteger;
@@ -24,10 +24,12 @@ import java.util.Date;
 
 import org.cp.elements.data.conversion.ConversionException;
 import org.cp.elements.enums.Gender;
+import org.cp.elements.lang.ThrowableAssertions;
+
 import org.junit.jupiter.api.Test;
 
 /**
- * Unit tests for {@link ByteConverter}.
+ * Unit Tests for {@link ByteConverter}.
  *
  * @author John J. Blum
  * @see java.lang.Byte
@@ -87,7 +89,7 @@ public class ByteConverterTests {
 
   @Test
   public void convertIntegerToByte() {
-    assertThat(this.converter.convert(-9)).isEqualTo(new Byte((byte) -9));
+    assertThat(this.converter.convert(-9)).isEqualTo(Byte.valueOf((byte) -9));
   }
 
   @Test
@@ -97,37 +99,25 @@ public class ByteConverterTests {
 
   @Test
   public void convertStringToByte() {
-    assertThat(this.converter.convert(" 64  ")).isEqualTo(new Byte((byte) 64));
+    assertThat(this.converter.convert(" 64  ")).isEqualTo(Byte.valueOf((byte) 64));
   }
 
-  @Test(expected = ConversionException.class)
+  @Test
   public void convertBooleanThrowsException() {
 
-    try {
-      this.converter.convert(true);
-    }
-    catch (ConversionException expected) {
-
-      assertThat(expected).hasMessage("Cannot convert [true] to [java.lang.Byte]");
-      assertThat(expected).hasNoCause();
-
-      throw expected;
-    }
+    assertThatExceptionOfType(ConversionException.class)
+      .isThrownBy(() -> this.converter.convert(true))
+      .withMessage("Cannot convert [true] to [java.lang.Byte]")
+      .withNoCause();
   }
 
-  @Test(expected = ConversionException.class)
+  @Test
   public void convertNamedNumberThrowsException() {
 
-    try {
-      this.converter.convert("two");
-    }
-    catch (ConversionException expected) {
-
-      assertThat(expected).hasMessage("Cannot convert [two] to [java.lang.Byte]");
-      assertThat(expected).hasNoCause();
-
-      throw expected;
-    }
+    assertThatExceptionOfType(ConversionException.class)
+      .isThrownBy(() -> this.converter.convert("two"))
+      .withMessage("Cannot convert [two] to [java.lang.Byte]")
+      .withNoCause();
   }
 
   @Test
@@ -135,34 +125,22 @@ public class ByteConverterTests {
     assertThat(this.converter.withDefaultValue((byte) 2).convert(null)).isEqualTo((byte) 2);
   }
 
-  @Test(expected = ConversionException.class)
+  @Test
   public void convertNullWithoutDefaultValueThrowsException() {
 
-    try {
-      this.converter.convert(null);
-    }
-    catch (ConversionException expected) {
-
-      assertThat(expected).hasMessage("Cannot convert [null] to [java.lang.Byte]");
-      assertThat(expected).hasNoCause();
-
-      throw expected;
-    }
+    assertThatExceptionOfType(ConversionException.class)
+      .isThrownBy(() -> this.converter.convert(null))
+      .withMessage("Cannot convert [null] to [java.lang.Byte]")
+      .withNoCause();
   }
 
-  @Test(expected = ConversionException.class)
+  @Test
   public void convertOverSizedByteThrowsException() {
 
-    try {
-      this.converter.convert("1234");
-    }
-    catch (ConversionException expected) {
-
-      assertThat(expected).hasMessage("[1234] is not a valid byte");
-      assertThat(expected).hasCauseInstanceOf(NumberFormatException.class);
-      assertThat(expected.getCause()).hasNoCause();
-
-      throw expected;
-    }
+    ThrowableAssertions.assertThatThrowableOfType(ConversionException.class)
+      .isThrownBy(args -> this.converter.convert("1234"))
+      .havingMessage("[1234] is not a valid byte")
+      .causedBy(NumberFormatException.class)
+      .withNoCause();
   }
 }
